[package]
edition      = "2024"
name         = "esp-tag"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp-tag"
path = "./src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable", "log-04"] }
esp-rtos = { version = "0.2.0", features = [
    "esp32c3",
    "embassy",
    "esp-alloc",
    "esp-radio",
    "log-04",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-alloc = "0.9.0"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
esp-radio = { version = "0.17.0", features = [
    "esp-now",
    "esp-alloc",
    "esp32c3",
    "unstable",
    "wifi",
] }
static_cell      = "2.1.1"
esp-backtrace = { version = "0.18.1", features = [
    "esp32c3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.1", features = [
    "esp32c3",
    "log-04",
] }
heapless = "0.9.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
