[package]
edition      = "2024"
name         = "esp-tag"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp-tag"
path = "./src/main.rs"
bench = false

[features]
default = ["std", "hardware"]
std = [
    "tokio",
]
hardware = [
    "esp-hal",
    "esp-rtos",
    "esp-bootloader-esp-idf",
    "esp-alloc",
    "esp-radio",
    "esp-backtrace",
    "esp-println",
    "embassy-executor",
    "embassy-time",
    "embassy-sync",
    "embassy-futures",
    "ssd1306",
    "embedded-hal-async",
    "embedded-graphics",
    "embassy-net",
]

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable", "log-04"], optional = true}
esp-rtos = { version = "0.2.0", features = [
    "esp32c3",
    "embassy",
    "esp-alloc",
    "esp-radio",
    "log-04",
], optional = true}
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"], optional = true}
esp-alloc = {version= "0.9.0", optional = true}
embassy-executor = { version = "0.9.1", optional = true }
embassy-time = {version = "0.5.0", optional = true}
embassy-sync = {version = "0.7.2", optional = true}
embassy-futures = {version = "0.1.1", optional = true}
embassy-net = { version = "0.7.1", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
], optional = true }
esp-radio = { version = "0.17.0", features = [
    "esp-now",
    "esp-alloc",
    "esp32c3",
    "unstable",
    "wifi",
], optional = true }
static_cell      = "2.1.1"
esp-backtrace = { version = "0.18.1", features = [
    "esp32c3",
    "panic-handler",
    "println",
], optional = true }
esp-println = { version = "0.16.1", features = [
    "esp32c3",
    "log-04",
], optional = true }
heapless = { version = "0.9.2", features = ["portable-atomic"] }
tokio = {version = "1.49.0", features = ["sync", "rt", "macros", "time"], optional = true }
ssd1306 = {version = "0.10.0", features = ["async"], optional = true }
embedded-hal-async = {version = "1.0.0", optional = true }
embedded-graphics = {version = "0.8.1", optional = true}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
